--- a/templates/admin_add_service.html
+++ b/templates/admin_add_service.html
@@ -2,6 +2,20 @@
 
 {% block remtitle %}Add Service{% endblock %}
 
+{% block cont %}
+
+<style>
+
+.card-header.bg-danger-gradient {
+    background: linear-gradient(135deg, #ff4444, #ff616f); /* Red gradient */
+    color: #ffffff; /* White text for contrast */
+    text-align: center;
+    font-weight: bold;
+    border-radius: 5px 5px 0 0; /* Match card's border-radius */
+}
+</style>
+{% endblock %}
+
 {% block home %}
 <a class="navbar-brand" href="/admin_dashboard">HomeDecore Services</a>
 {% endblock %}
